# developerNotebook

./: .cursorignore  .dockerignore  .env.example  .gitignore  2nd_edition.txt  3rd_edition.txt  Developer_Commands.docx  Dockerfile  README.md  fly.toml  pyproject.toml  ~$veloper_Commands.docx
app/: __init__.py  auth.py  bootstrap.py  bundled_starter_data.py  csrf.py  database.py  docx_seed.py  indexing.py  invite_requests.py  main.py  models.py  rate_limit.py  seed_data.py  settings.py  slug.py  templating.py  validation.py
app/routes/: admin.py  entries.py  pages.py  search.py  sections.py  topics.py
app/services/: guest.py  seed.py
app/static/: app.js  home.js  index-filter.js  seed-topics.js  styles.css  theme-init.js  topic.js
app/templates/: base.html  change_password.html  delete_account.html  home.html  index.html  login.html  register.html  request_invite.html  search.html  seed_topics.html  topic.html  welcome.html
app/templates/admin/: dashboard.html  invite_requests.html  invites.html  layout.html  password_form.html  starter.html
cursor_chats/: developer_notebook_implementation_6e882178.plan.md  project-design.md
dev_notebook/: __init__.py
docs/: DEPLOYMENT.md  DEVELOPMENT.md
scripts/: backup-notebook.sh  generate_starter_data.py  io.developernotebook.backup.plist alias
tests/: conftest.py  test_admin_suite.py  test_auth.py  test_bootstrap.py  test_entries.py  test_guest.py  test_health.py  test_invite_requests.py  test_models.py  test_pages.py  test_search.py  test_sections.py  test_seed.py  test_sqlite_schema_migrations.py  test_topics.py
(+27 files in other folders)
