[project]
name = "developer-notebook"
version = "0.1.0"
description = "Make my collection of programming commands available everywhere."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.133.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]
